--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Noumène — Location de catamaran avec skipper en Polynésie Française. Croisière privée à Tahiti, Moorea, Bora-Bora, Raiatea, Huahine, Tuamotu et Marquises. Charter voilier tout inclus." />
+    <meta name="keywords" content="charter polynésie, location catamaran polynésie, croisière polynésie française, location bateau tahiti, charter voilier bora bora, catamaran avec skipper, croisière privée tahiti, location yacht polynésie, charter bateau moorea, croisière îles sous le vent, voilier polynésie française, location bateau bora bora, charter catamaran tahiti, vacances bateau polynésie, croisière tuamotu, croisière marquises, sailing polynesia, boat charter french polynesia, catamaran cruise tahiti" />
+    <meta name="author" content="Noumène Charter" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Noumène — Charter Catamaran en Polynésie Française" />
+    <meta property="og:description" content="Embarquez à bord du catamaran Noumène pour une croisière inoubliable au cœur des lagons polynésiens. Tahiti, Bora-Bora, Moorea et plus encore." />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="fr_FR" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>Noumène — Charter en Polynésie</title>
+    <title>Noumène — Charter Catamaran en Polynésie Française | Croisière Tahiti, Bora-Bora, Moorea</title>
   </head>
   <body>
     <div id="root"></div>
