fix: favicon to Web-icon.svg, fix GitHub Pages base path & homepage

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/NoumeneCharter/Web-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Noumène — Location de catamaran avec skipper en Polynésie Française. Croisière privée à Tahiti, Moorea, Bora-Bora, Raiatea, Huahine, Tuamotu et Marquises. Charter voilier tout inclus." />
     <meta name="keywords" content="charter polynésie, location catamaran polynésie, croisière polynésie française, location bateau tahiti, charter voilier bora bora, catamaran avec skipper, croisière privée tahiti, location yacht polynésie, charter bateau moorea, croisière îles sous le vent, voilier polynésie française, location bateau bora bora, charter catamaran tahiti, vacances bateau polynésie, croisière tuamotu, croisière marquises, sailing polynesia, boat charter french polynesia, catamaran cruise tahiti" />
